src/styles/components/todo-item.scss
@use "../helpers" as *;

.todo-item {
  padding: var(--padding-small);
  display: flex;
  align-items: center;
  column-gap: rem(20);
  
  &:not(:last-child) {
    border-bottom: var(--border);
  }

  &__label {
    width: 100%;
    padding: calc(var(--padding-small) / 2);
    transition-duration: var(--transition-duration);

    &--editable {
      border: var(--border-orange-100);
      outline: 0;
    }

    &--completed {
      text-decoration: line-through;
      opacity: 0.5;
    }
  }

  &__delete-task-button {
    position: relative;
    margin-left: auto;
    @include square(rem(32));
    flex-shrink: 0;
    background-color: var(--color-orange-100);
    border: none;
    border-radius: 50%;
    transition-duration: var(--transition-duration);
    opacity: 0.75;
    cursor: pointer;

    &::before {
      content: '';
      @include abs-center;
      z-index: 10;
      @include square(150%);
    }

    &::after {
      content: '';
      @include abs-center;
      @include square(100%);
      background-image: url("/delete-task-icon.svg");
      background-position: center;
      background-repeat: no-repeat;
    }

    @include hover {
      opacity: 1;
    }
  }
}

